--- a/localisation/events_l_english.yml
+++ b/localisation/events_l_english.yml
@@ -1,7 +1,10 @@
 ﻿l_english:
  goz.dukha.t:0 "Dukha"
  goz.dukha.d:0 "Play Dukha"
- goz.dukha.a:0 "Start game"
+ goz.dukha.a:0 "Bet 20"
+ goz.dukha.b:0 "Bet 50"
+ goz.dukha.c:0 "Bet 100"
+ goz.dukha.e:0 "Bet 200"
 
  goz.1.d:0  "Your hand\n§PAurochs\n§RBloodhound\n§GCaiman"
  goz.2.d:0  "Your hand\n§PAurochs\n§RBloodhound\n§BDolphin"
@@ -23,7 +26,7 @@
  goz.18.d:0 "Your hand\n§GCaiman\n§BDolphin\n§OFalcon"
  goz.19.d:0 "Your hand\n§GCaiman\n§QElephant\n§OFalcon"
  goz.20.d:0 "Your hand\n§BDolphin\n§QElephant\n§OFalcon"
-###
+#
  goz.1.t:0 "Dukha"
  goz.2.t:0 "Dukha"
  goz.3.t:0 "Dukha"
@@ -105,6 +108,27 @@
  goz.20.a:0 "Discard §BDolphin"
  goz.20.b:0 "Discard §QElephant"
  goz.20.c:0 "Discard §OFalcon"
+#
+ goz.1.e:0 "Call a new card"
+ goz.2.e:0 "Call a new card"
+ goz.3.e:0 "Call a new card"
+ goz.4.e:0 "Call a new card"
+ goz.5.e:0 "Call a new card"
+ goz.6.e:0 "Call a new card"
+ goz.7.e:0 "Call a new card"
+ goz.8.e:0 "Call a new card"
+ goz.9.e:0 "Call a new card"
+ goz.10.e:0 "Call a new card"
+ goz.11.e:0 "Call a new card"
+ goz.12.e:0 "Call a new card"
+ goz.13.e:0 "Call a new card"
+ goz.14.e:0 "Call a new card"
+ goz.15.e:0 "Call a new card"
+ goz.16.e:0 "Call a new card"
+ goz.17.e:0 "Call a new card"
+ goz.18.e:0 "Call a new card"
+ goz.19.e:0 "Call a new card"
+ goz.20.e:0 "Call a new card"
 #
  goz.21.t:0 "Dukha"
  goz.22.t:0 "Dukha"
@@ -347,3 +371,124 @@
  goz.138.d:0 "Your hand\n§BDolphin\n§QElephant\n§OFalcon\n§BDolphin"
  goz.139.d:0 "Your hand\n§BDolphin\n§QElephant\n§OFalcon\n§QElephant"
  goz.140.d:0 "Your hand\n§BDolphin\n§QElephant\n§OFalcon\n§OFalcon"
+#
+ goz.21.a:0 "Lucky Win"
+ goz.22.a:0 "Lucky Win"
+ goz.23.a:0 "End Game"
+ goz.24.a:0 "Lucky Win"
+ goz.25.a:0 "Lucky Win"
+ goz.26.a:0 "Lucky Win"
+ goz.27.a:0 "End Game"
+ goz.28.a:0 "End Game"
+ goz.29.a:0 "Lucky Win"
+ goz.30.a:0 "End Game"
+ goz.31.a:0 "Lucky Win"
+ goz.32.a:0 "Lucky Win"
+ goz.33.a:0 "End Game"
+ goz.34.a:0 "End Game"
+ goz.35.a:0 "Lucky Win"
+ goz.36.a:0 "Lucky Win"
+ goz.37.a:0 "End Game"
+ goz.38.a:0 "Lucky Win"
+ goz.39.a:0 "Lucky Win"
+ goz.40.a:0 "Lucky Win"
+ goz.41.a:0 "Lucky Win"
+ goz.42.a:0 "Lucky Win"
+ goz.43.a:0 "Lucky Win"
+ goz.44.a:0 "End Game"
+ goz.45.a:0 "Lucky Win"
+ goz.46.a:0 "Lucky Win"
+ goz.47.a:0 "End Game"
+ goz.48.a:0 "Lucky Win"
+ goz.49.a:0 "Lucky Win"
+ goz.50.a:0 "Lucky Win"
+ goz.51.a:0 "Lucky Win"
+ goz.52.a:0 "Lucky Win"
+ goz.53.a:0 "End Game"
+ goz.54.a:0 "Lucky Win"
+ goz.55.a:0 "Lucky Win"
+ goz.56.a:0 "Lucky Win"
+ goz.57.a:0 "End Game"
+ goz.58.a:0 "Lucky Win"
+ goz.59.a:0 "End Game"
+ goz.60.a:0 "Lucky Win"
+ goz.61.a:0 "Lucky Win"
+ goz.62.a:0 "End Game"
+ goz.63.a:0 "End Game"
+ goz.64.a:0 "Lucky Win"
+ goz.65.a:0 "Lucky Win"
+ goz.66.a:0 "End Game"
+ goz.67.a:0 "End Game"
+ goz.68.a:0 "Lucky Win"
+ goz.69.a:0 "Lucky Win"
+ goz.70.a:0 "Lucky Win"
+ goz.71.a:0 "Lucky Win"
+ goz.72.a:0 "Lucky Win"
+ goz.73.a:0 "Lucky Win"
+ goz.74.a:0 "End Game"
+ goz.75.a:0 "Lucky Win"
+ goz.76.a:0 "Lucky Win"
+ goz.77.a:0 "Lucky Win"
+ goz.78.a:0 "Lucky Win"
+ goz.79.a:0 "Lucky Win"
+ goz.80.a:0 "End Game"
+ goz.81.a:0 "Lucky Win"
+ goz.82.a:0 "Lucky Win"
+ goz.83.a:0 "End Game"
+ goz.84.a:0 "Lucky Win"
+ goz.85.a:0 "Lucky Win"
+ goz.86.a:0 "Lucky Win"
+ goz.87.a:0 "Lucky Win"
+ goz.88.a:0 "Lucky Win"
+ goz.89.a:0 "End Game"
+ goz.90.a:0 "Lucky Win"
+ goz.91.a:0 "Lucky Win"
+ goz.92.a:0 "Lucky Win"
+ goz.93.a:0 "Lucky Win"
+ goz.94.a:0 "End Game"
+ goz.95.a:0 "End Game"
+ goz.96.a:0 "Lucky Win"
+ goz.97.a:0 "Lucky Win"
+ goz.98.a:0 "End Game"
+ goz.99.a:0 "Lucky Win"
+ goz.100.a:0 "End Game"
+ goz.101.a:0 "Lucky Win"
+ goz.102.a:0 "End Game"
+ goz.103.a:0 "End Game"
+ goz.104.a:0 "Lucky Win"
+ goz.105.a:0 "Lucky Win"
+ goz.106.a:0 "Lucky Win"
+ goz.107.a:0 "Lucky Win"
+ goz.108.a:0 "Lucky Win"
+ goz.109.a:0 "Lucky Win"
+ goz.110.a:0 "End Game"
+ goz.111.a:0 "Lucky Win"
+ goz.112.a:0 "Lucky Win"
+ goz.113.a:0 "Lucky Win"
+ goz.114.a:0 "Lucky Win"
+ goz.115.a:0 "Lucky Win"
+ goz.116.a:0 "End Game"
+ goz.117.a:0 "Lucky Win"
+ goz.118.a:0 "Lucky Win"
+ goz.119.a:0 "End Game"
+ goz.120.a:0 "Lucky Win"
+ goz.121.a:0 "Lucky Win"
+ goz.122.a:0 "Lucky Win"
+ goz.123.a:0 "Lucky Win"
+ goz.124.a:0 "Lucky Win"
+ goz.125.a:0 "End Game"
+ goz.126.a:0 "Lucky Win"
+ goz.127.a:0 "Lucky Win"
+ goz.128.a:0 "End Game"
+ goz.129.a:0 "Lucky Win"
+ goz.130.a:0 "Lucky Win"
+ goz.131.a:0 "End Game"
+ goz.132.a:0 "Lucky Win"
+ goz.133.a:0 "End Game"
+ goz.134.a:0 "End Game"
+ goz.135.a:0 "Lucky Win"
+ goz.136.a:0 "Lucky Win"
+ goz.137.a:0 "Lucky Win"
+ goz.138.a:0 "Lucky Win"
+ goz.139.a:0 "Lucky Win"
+ goz.140.a:0 "End Game"
