--- a/localisation/test_l_english.yml
+++ b/localisation/test_l_english.yml
@@ -33,11 +33,11 @@
  CRP_neutrality:0 "Corruption"
  
  #Icrusian civil war
- DCR_fascism:0 "Republic of Icrusia"
+ DCR_democratic:0 "Republic of Icrusia"
  LCR_fascism:0 "Icrusia Military State"
  
  #arbiters
-  MRO_neutrality:0 "Misaross"
+  MRO_democratic:0 "Misaross"
   CTP_neutrality:0 "Cleatport"
   DPL_neutrality:0 "Dinpool"
   QOH_neutrality:0 "Qohphis"
