--- a/localisation/equipment_l_english.yml
+++ b/localisation/equipment_l_english.yml
@@ -1,4 +1,29 @@
 ﻿l_english:
+ #akob
+
+ #cavalry
+ akob_cuirassier_equipment_1:0 "Cuirassier 1"
+ akob_cuirassier_equipment_1_desc:0 "Cuirassier 1 desc"
+ akob_cuirassier_equipment_2:0 "Cuirassier 2"
+ akob_cuirassier_equipment_2_desc:0 "Cuirassier 2 desc"
+ akob_cuirassier_equipment_3:0 "Cuirassier 3"
+ akob_cuirassier_equipment_3_desc:0 "Cuirassier 3 desc"
+
+ akob_lancer_equipment_1:0 "Lancer 1"
+ akob_lancer_equipment_1_desc:0 "Lancer 1 desc"
+ akob_lancer_equipment_2:0 "Lancer 2"
+ akob_lancer_equipment_2_desc:0 "Lancer 2 desc"
+ akob_lancer_equipment_3:0 "Lancer 3"
+ akob_lancer_equipment_3_desc:0 "Lancer 3 desc"
+
+ akob_canister_shot_equipment_1:0 "Canister Shot 1"
+ akob_canister_shot_equipment_1_desc:0 "Canister Shot 1 desc"
+ akob_canister_shot_equipment_2:0 "Canister Shot 2"
+ akob_canister_shot_equipment_2_desc:0 "Canister Shot 2 desc"
+ akob_canister_shot_equipment_3:0 "Canister Shot 3"
+ akob_canister_shot_equipment_3_desc:0 "Canister Shot 3 desc"
+
+ #vanilla
  submarine:0 "Submarine"
  submarine_desc:0 "Submarines employ stealth and powerful torpedoes to destroy enemy convoys."
  both_cruisers_desc:0 "Light Cruiser - A light screening vessel. Its primary duty is to shield capital ships from enemy light ships but can also unleash powerful torpedoes that can hurt bigger ships.\n\nHeavy Crusier - A large armored cruiser that is pretty flexible. A good choice for nations who can't afford to build larger capital ships."
