--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -1,4 +1,58 @@
 ﻿l_english:
+
+#akob
+ LTV_otto_marquez:0 "Otto Marquez"
+ LTV_lynwood_arrington:0 "Lynwood Arrington"
+ LTV_fletcher_montague:0 "Fletcher Montague"
+ LTV_fritz_ames:0 "Fritz Ames"
+ LTV_florencio_main:0 "Florencio Main"
+ LTV_quinton_palacios:0 "Quinton Palacios"
+ LTV_aldo_weir:0 "Aldo Weir"
+ LTV_fletcher_bustamante:0 "Fletcher Bustamante"
+ LTV_leonardo_yancey:0 "Leonardo Yancey"
+ LTV_mervin_thornburg:0 "Mervin Thornburg"
+ LTV_jewell_kunz:0 "Jewell Kunz"
+ LTV_odis_guajardo:0 "Odis Guajardo"
+ LTV_dewayne_barham:0 "Dewayne Barham"
+ LTV_lawerence_katz:0 "Lawerence Katz"
+ LTV_augustus_keck:0 "Augustus Keck"
+
+ ICR_theunis_rochus:0 "Theunis Rochus"
+ ICR_willy_gerlach:0 "Willy Gerlach"
+ ICR_roland_sieuwerd:0 "Roland Sieuwerd"
+ ICR_sjors_timotheus:0 "Sjors Timotheus"
+ ICR_martinus_wubbe:0 "Martinus Wubbe"
+ ICR_marco_izaac:0 "Marco Izaac"
+ ICR_crispian_shelly:0 "Crispian Shelly"
+ ICR_pace_marcus:0 "Pace Marcus"
+ ICR_shel_ira:0 "Shel Ira"
+ ICR_abram_elian:0 "Abram Elian"
+ ICR_chesley_thatcher:0 "Chesley Thatcher"
+ ICR_robin_frankie:0 "Robin Frankie"
+ ICR_koert_storm:0 "Koert Storm"
+ ICR_jayceon_carrol:0 "Jayceon Carrol"
+ ICR_olly_rodge:0 "Olly Rodge"
+ ICR_earnest_carlisle:0 "Earnest Carlisle"
+ ICR_haven_rjan:0 "Haven Rjan"
+ ICR_garrick_stijn:0 "Garrick Stijn"
+ ICR_devereux_mitch:0 "Devereux Mitch"
+
+ ARS_neilos_blandinus:0 "Neilos Blandinus"
+ ARS_archelaus_eadwig:0 "Archelaus Eadwig"
+ ARS_numitor_alcides:0 "Numitor Alcides"
+ ARS_paulus_tryphon:0 "Paulus Tryphon"
+ ARS_osgar_faustus:0 "Osgar Faustus"
+ ARS_wulfstan_bada:0 "Wulfstan Bada"
+ ARS_hereward_fynn:0 "Hereward Fynn"
+ ARS_marwin_ceolmund:0 "Marwin Ceolmund"
+ ARS_rupert_sadiq:0 "Rupert Sadiq"
+ ARS_niko_bernhard:0 "Niko Bernhard"
+ ARS_dennis_ankraz:0 "Dennis Ankraz"
+ ARS_alexander_valentin:0 "Alexander Valentin"
+ ARS_udo_ludger:0 "Udo Ludger"
+ ARS_gisbert_hartwin:0 "Gisbert Hartwin"
+
+#vanilla
  fascist_influence:0 "Fascist Influence"
  fascist_influence_desc:0 "Fascist pressure has made fascism very popular, and the country is susceptible to align with other fascists."
  communist_influence:0 "Communist Influence"
