music, maps, units and leaders
also bug fixes

--- a/localisation/akob_leaders_l_english.yml
+++ b/localisation/akob_leaders_l_english.yml
@@ -1,3 +1,5 @@
 ﻿l_english:
  POLITICS_VITAS_DESC:0 "Maybe Vito likes her for her body..."
  POLITICS_AMARIS_DESC:0 "She stands out for more than just her void magic you know..."
+ POLITICS_ROWE_DESC:0 "Rowe desc"
+ POLITICS_REDMOND_DESC:0 "Redmond desc"
