fixed up SLV ILD

--- a/localisation/akob_events_l_english.yml
+++ b/localisation/akob_events_l_english.yml
@@ -492,3 +492,17 @@
  goz.138.a:0 "Lucky Win"
  goz.139.a:0 "Lucky Win"
  goz.140.a:0 "End Game"
+
+#SLV_ILD
+ ild.7.t:0 "Void rupture"
+ ild.7.a:0 "Yay"
+ ild.7.b:0 "Nay"
+ ild.8.t:0 "First Labour"
+ ild.9.t:0 "Second Labour"
+ ild.10.t:0 "Third Labour"
+ ild.11.t:0 "Fourth Labour"
+ ild.12.t:0 "Fifth Labour"
+ ild.13.t:0 "Sixth Labour"
+ ild.14.t:0 "Seventh Labour"
+ ild.15.t:0 "Eighth Labour"
+ ild.16.t:0 "Salvation syndicate"
