--- a/localisation/akob_pain_l_english.yml
+++ b/localisation/akob_pain_l_english.yml
@@ -1,3 +1,3 @@
 ﻿l_english:
  goz.1.t:0 "does tis work"
- goz.1.d:0 "[?party_popularity@democracy|%G0]"
+ goz.1.d:0 "[?root.GOZ_dukha_fire|R]\n[?root.GOZ_dukha_water|B]\n[?root.GOZ_dukha_slime|G]\n[?root.GOZ_dukha_candy|O]\n"
