--- a/localisation/akob_events_l_english.yml
+++ b/localisation/akob_events_l_english.yml
@@ -1,508 +1,14 @@
-﻿#l_english:
-# goz.dukha.t:0 "Dukha"
-# goz.dukha.d:0 "Play Dukha"
-# goz.dukha.a:0 "Bet 20"
-# goz.dukha.b:0 "Bet 50"
-# goz.dukha.c:0 "Bet 100"
-# goz.dukha.e:0 "Bet 200"
-#
-# goz.1.d:0  "Your hand\n§PAurochs\n§RBloodhound\n§GCaiman"
-# goz.2.d:0  "Your hand\n§PAurochs\n§RBloodhound\n§BDolphin"
-# goz.3.d:0  "Your hand\n§PAurochs\n§RBloodhound\n§QElephant"
-# goz.4.d:0  "Your hand\n§PAurochs\n§RBloodhound\n§OFalcon"
-# goz.5.d:0  "Your hand\n§PAurochs\n§GCaiman\n§BDolphin"
-# goz.6.d:0  "Your hand\n§PAurochs\n§GCaiman\n§QElephant"
-# goz.7.d:0  "Your hand\n§PAurochs\n§GCaiman\n§OFalcon"
-# goz.8.d:0  "Your hand\n§PAurochs\n§BDolphin\n§QElephant"
-# goz.9.d:0  "Your hand\n§PAurochs\n§BDolphin\n§OFalcon"
-# goz.10.d:0 "Your hand\n§PAurochs\n§QElephant\n§OFalcon"
-# goz.11.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§BDolphin"
-# goz.12.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§QElephant"
-# goz.13.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§OFalcon"
-# goz.14.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§QElephant"
-# goz.15.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§OFalcon"
-# goz.16.d:0 "Your hand\n§RBloodhound\n§QElephant\n§OFalcon"
-# goz.17.d:0 "Your hand\n§GCaiman\n§BDolphin\n§QElephant"
-# goz.18.d:0 "Your hand\n§GCaiman\n§BDolphin\n§OFalcon"
-# goz.19.d:0 "Your hand\n§GCaiman\n§QElephant\n§OFalcon"
-# goz.20.d:0 "Your hand\n§BDolphin\n§QElephant\n§OFalcon"
-##
-# goz.1.t:0 "Dukha"
-# goz.2.t:0 "Dukha"
-# goz.3.t:0 "Dukha"
-# goz.4.t:0 "Dukha"
-# goz.5.t:0 "Dukha"
-# goz.6.t:0 "Dukha"
-# goz.7.t:0 "Dukha"
-# goz.8.t:0 "Dukha"
-# goz.9.t:0 "Dukha"
-# goz.10.t:0 "Dukha"
-# goz.11.t:0 "Dukha"
-# goz.12.t:0 "Dukha"
-# goz.13.t:0 "Dukha"
-# goz.14.t:0 "Dukha"
-# goz.15.t:0 "Dukha"
-# goz.16.t:0 "Dukha"
-# goz.17.t:0 "Dukha"
-# goz.18.t:0 "Dukha"
-# goz.19.t:0 "Dukha"
-# goz.20.t:0 "Dukha"
-##
-# goz.1.a:0 "Discard §PAurochs"
-# goz.1.b:0 "Discard §RBloodhound"
-# goz.1.c:0 "Discard §GCaiman"
-# goz.2.a:0 "Discard §PAurochs"
-# goz.2.b:0 "Discard §RBloodhound"
-# goz.2.c:0 "Discard §BDolphin"
-# goz.3.a:0 "Discard §PAurochs"
-# goz.3.b:0 "Discard §RBloodhound"
-# goz.3.c:0 "Discard §QElephant"
-# goz.4.a:0 "Discard §PAurochs"
-# goz.4.b:0 "Discard §RBloodhound"
-# goz.4.c:0 "Discard §OFalcon"
-# goz.5.a:0 "Discard §PAurochs"
-# goz.5.b:0 "Discard §GCaiman"
-# goz.5.c:0 "Discard §BDolphin"
-# goz.6.a:0 "Discard §PAurochs"
-# goz.6.b:0 "Discard §GCaiman"
-# goz.6.c:0 "Discard §QElephant"
-# goz.7.a:0 "Discard §PAurochs"
-# goz.7.b:0 "Discard §GCaiman"
-# goz.7.c:0 "Discard §OFalcon"
-# goz.8.a:0 "Discard §PAurochs"
-# goz.8.b:0 "Discard §BDolphin"
-# goz.8.c:0 "Discard §QElephant"
-# goz.9.a:0 "Discard §PAurochs"
-# goz.9.b:0 "Discard §BDolphin"
-# goz.9.c:0 "Discard §OFalcon"
-# goz.10.a:0 "Discard §PAurochs"
-# goz.10.b:0 "Discard §QElephant"
-# goz.10.c:0 "Discard §OFalcon"
-# goz.11.a:0 "Discard §RBloodhound"
-# goz.11.b:0 "Discard §GCaiman"
-# goz.11.c:0 "Discard §BDolphin"
-# goz.12.a:0 "Discard §RBloodhound"
-# goz.12.b:0 "Discard §GCaiman"
-# goz.12.c:0 "Discard §QElephant"
-# goz.13.a:0 "Discard §RBloodhound"
-# goz.13.b:0 "Discard §GCaiman"
-# goz.13.c:0 "Discard §OFalcon"
-# goz.14.a:0 "Discard §RBloodhound"
-# goz.14.b:0 "Discard §BDolphin"
-# goz.14.c:0 "Discard §QElephant"
-# goz.15.a:0 "Discard §RBloodhound"
-# goz.15.b:0 "Discard §BDolphin"
-# goz.15.c:0 "Discard §OFalcon"
-# goz.16.a:0 "Discard §RBloodhound"
-# goz.16.b:0 "Discard §QElephant"
-# goz.16.c:0 "Discard §OFalcon"
-# goz.17.a:0 "Discard §GCaiman"
-# goz.17.b:0 "Discard §BDolphin"
-# goz.17.c:0 "Discard §QElephant"
-# goz.18.a:0 "Discard §GCaiman"
-# goz.18.b:0 "Discard §BDolphin"
-# goz.18.c:0 "Discard §OFalcon"
-# goz.19.a:0 "Discard §GCaiman"
-# goz.19.b:0 "Discard §QElephant"
-# goz.19.c:0 "Discard §OFalcon"
-# goz.20.a:0 "Discard §BDolphin"
-# goz.20.b:0 "Discard §QElephant"
-# goz.20.c:0 "Discard §OFalcon"
-##
-# goz.1.e:0 "Call a new card"
-# goz.2.e:0 "Call a new card"
-# goz.3.e:0 "Call a new card"
-# goz.4.e:0 "Call a new card"
-# goz.5.e:0 "Call a new card"
-# goz.6.e:0 "Call a new card"
-# goz.7.e:0 "Call a new card"
-# goz.8.e:0 "Call a new card"
-# goz.9.e:0 "Call a new card"
-# goz.10.e:0 "Call a new card"
-# goz.11.e:0 "Call a new card"
-# goz.12.e:0 "Call a new card"
-# goz.13.e:0 "Call a new card"
-# goz.14.e:0 "Call a new card"
-# goz.15.e:0 "Call a new card"
-# goz.16.e:0 "Call a new card"
-# goz.17.e:0 "Call a new card"
-# goz.18.e:0 "Call a new card"
-# goz.19.e:0 "Call a new card"
-# goz.20.e:0 "Call a new card"
-##
-# goz.21.t:0 "Dukha"
-# goz.22.t:0 "Dukha"
-# goz.23.t:0 "Dukha"
-# goz.24.t:0 "Dukha"
-# goz.25.t:0 "Dukha"
-# goz.26.t:0 "Dukha"
-# goz.27.t:0 "Dukha"
-# goz.28.t:0 "Dukha"
-# goz.29.t:0 "Dukha"
-# goz.30.t:0 "Dukha"
-# goz.31.t:0 "Dukha"
-# goz.32.t:0 "Dukha"
-# goz.33.t:0 "Dukha"
-# goz.34.t:0 "Dukha"
-# goz.35.t:0 "Dukha"
-# goz.36.t:0 "Dukha"
-# goz.37.t:0 "Dukha"
-# goz.38.t:0 "Dukha"
-# goz.39.t:0 "Dukha"
-# goz.40.t:0 "Dukha"
-# goz.41.t:0 "Dukha"
-# goz.42.t:0 "Dukha"
-# goz.43.t:0 "Dukha"
-# goz.44.t:0 "Dukha"
-# goz.45.t:0 "Dukha"
-# goz.46.t:0 "Dukha"
-# goz.47.t:0 "Dukha"
-# goz.48.t:0 "Dukha"
-# goz.49.t:0 "Dukha"
-# goz.50.t:0 "Dukha"
-# goz.51.t:0 "Dukha"
-# goz.52.t:0 "Dukha"
-# goz.53.t:0 "Dukha"
-# goz.54.t:0 "Dukha"
-# goz.55.t:0 "Dukha"
-# goz.56.t:0 "Dukha"
-# goz.57.t:0 "Dukha"
-# goz.58.t:0 "Dukha"
-# goz.59.t:0 "Dukha"
-# goz.60.t:0 "Dukha"
-# goz.61.t:0 "Dukha"
-# goz.62.t:0 "Dukha"
-# goz.63.t:0 "Dukha"
-# goz.64.t:0 "Dukha"
-# goz.65.t:0 "Dukha"
-# goz.66.t:0 "Dukha"
-# goz.67.t:0 "Dukha"
-# goz.68.t:0 "Dukha"
-# goz.69.t:0 "Dukha"
-# goz.70.t:0 "Dukha"
-# goz.71.t:0 "Dukha"
-# goz.72.t:0 "Dukha"
-# goz.73.t:0 "Dukha"
-# goz.74.t:0 "Dukha"
-# goz.75.t:0 "Dukha"
-# goz.76.t:0 "Dukha"
-# goz.77.t:0 "Dukha"
-# goz.78.t:0 "Dukha"
-# goz.79.t:0 "Dukha"
-# goz.80.t:0 "Dukha"
-# goz.81.t:0 "Dukha"
-# goz.82.t:0 "Dukha"
-# goz.83.t:0 "Dukha"
-# goz.84.t:0 "Dukha"
-# goz.85.t:0 "Dukha"
-# goz.86.t:0 "Dukha"
-# goz.87.t:0 "Dukha"
-# goz.88.t:0 "Dukha"
-# goz.89.t:0 "Dukha"
-# goz.90.t:0 "Dukha"
-# goz.91.t:0 "Dukha"
-# goz.92.t:0 "Dukha"
-# goz.93.t:0 "Dukha"
-# goz.94.t:0 "Dukha"
-# goz.95.t:0 "Dukha"
-# goz.96.t:0 "Dukha"
-# goz.97.t:0 "Dukha"
-# goz.98.t:0 "Dukha"
-# goz.99.t:0 "Dukha"
-# goz.100.t:0 "Dukha"
-# goz.101.t:0 "Dukha"
-# goz.102.t:0 "Dukha"
-# goz.103.t:0 "Dukha"
-# goz.104.t:0 "Dukha"
-# goz.105.t:0 "Dukha"
-# goz.106.t:0 "Dukha"
-# goz.107.t:0 "Dukha"
-# goz.108.t:0 "Dukha"
-# goz.109.t:0 "Dukha"
-# goz.110.t:0 "Dukha"
-# goz.111.t:0 "Dukha"
-# goz.112.t:0 "Dukha"
-# goz.113.t:0 "Dukha"
-# goz.114.t:0 "Dukha"
-# goz.115.t:0 "Dukha"
-# goz.116.t:0 "Dukha"
-# goz.117.t:0 "Dukha"
-# goz.118.t:0 "Dukha"
-# goz.119.t:0 "Dukha"
-# goz.120.t:0 "Dukha"
-# goz.121.t:0 "Dukha"
-# goz.122.t:0 "Dukha"
-# goz.123.t:0 "Dukha"
-# goz.124.t:0 "Dukha"
-# goz.125.t:0 "Dukha"
-# goz.126.t:0 "Dukha"
-# goz.127.t:0 "Dukha"
-# goz.128.t:0 "Dukha"
-# goz.129.t:0 "Dukha"
-# goz.130.t:0 "Dukha"
-# goz.131.t:0 "Dukha"
-# goz.132.t:0 "Dukha"
-# goz.133.t:0 "Dukha"
-# goz.134.t:0 "Dukha"
-# goz.135.t:0 "Dukha"
-# goz.136.t:0 "Dukha"
-# goz.137.t:0 "Dukha"
-# goz.138.t:0 "Dukha"
-# goz.139.t:0 "Dukha"
-# goz.140.t:0 "Dukha"
-##
-# goz.21.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§GCaiman\n§PAurochs"
-# goz.22.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§GCaiman\n§RBloodhound"
-# goz.23.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§GCaiman\n§GCaiman"
-# goz.24.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§GCaiman\n§BDolphin"
-# goz.25.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§GCaiman\n§QElephant"
-# goz.26.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§GCaiman\n§OFalcon"
-# goz.27.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§BDolphin\n§PAurochs"
-# goz.28.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§BDolphin\n§RBloodhound"
-# goz.29.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§BDolphin\n§GCaiman"
-# goz.30.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§BDolphin\n§BDolphin"
-# goz.31.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§BDolphin\n§QElephant"
-# goz.32.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§BDolphin\n§OFalcon"
-# goz.33.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§QElephant\n§PAurochs"
-# goz.34.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§QElephant\n§RBloodhound"
-# goz.35.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§QElephant\n§GCaiman"
-# goz.36.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§QElephant\n§BDolphin"
-# goz.37.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§QElephant\n§QElephant"
-# goz.38.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§QElephant\n§OFalcon"
-# goz.39.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§OFalcon\n§PAurochs"
-# goz.40.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§OFalcon\n§RBloodhound"
-# goz.41.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§OFalcon\n§GCaiman"
-# goz.42.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§OFalcon\n§BDolphin"
-# goz.43.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§OFalcon\n§QElephant"
-# goz.44.d:0 "Your hand\n§PAurochs\n§RBloodhound\n§OFalcon\n§OFalcon"
-# goz.45.d:0 "Your hand\n§PAurochs\n§GCaiman\n§BDolphin\n§PAurochs"
-# goz.46.d:0 "Your hand\n§PAurochs\n§GCaiman\n§BDolphin\n§RBloodhound"
-# goz.47.d:0 "Your hand\n§PAurochs\n§GCaiman\n§BDolphin\n§GCaiman"
-# goz.48.d:0 "Your hand\n§PAurochs\n§GCaiman\n§BDolphin\n§BDolphin"
-# goz.49.d:0 "Your hand\n§PAurochs\n§GCaiman\n§BDolphin\n§QElephant"
-# goz.50.d:0 "Your hand\n§PAurochs\n§GCaiman\n§BDolphin\n§OFalcon"
-# goz.51.d:0 "Your hand\n§PAurochs\n§GCaiman\n§QElephant\n§PAurochs"
-# goz.52.d:0 "Your hand\n§PAurochs\n§GCaiman\n§QElephant\n§RBloodhound"
-# goz.53.d:0 "Your hand\n§PAurochs\n§GCaiman\n§QElephant\n§GCaiman"
-# goz.54.d:0 "Your hand\n§PAurochs\n§GCaiman\n§QElephant\n§BDolphin"
-# goz.55.d:0 "Your hand\n§PAurochs\n§GCaiman\n§QElephant\n§QElephant"
-# goz.56.d:0 "Your hand\n§PAurochs\n§GCaiman\n§QElephant\n§OFalcon"
-# goz.57.d:0 "Your hand\n§PAurochs\n§GCaiman\n§OFalcon\n§PAurochs"
-# goz.58.d:0 "Your hand\n§PAurochs\n§GCaiman\n§OFalcon\n§RBloodhound"
-# goz.59.d:0 "Your hand\n§PAurochs\n§GCaiman\n§OFalcon\n§GCaiman"
-# goz.60.d:0 "Your hand\n§PAurochs\n§GCaiman\n§OFalcon\n§BDolphin"
-# goz.61.d:0 "Your hand\n§PAurochs\n§GCaiman\n§OFalcon\n§QElephant"
-# goz.62.d:0 "Your hand\n§PAurochs\n§GCaiman\n§OFalcon\n§OFalcon"
-# goz.63.d:0 "Your hand\n§PAurochs\n§BDolphin\n§QElephant\n§PAurochs"
-# goz.64.d:0 "Your hand\n§PAurochs\n§BDolphin\n§QElephant\n§RBloodhound"
-# goz.65.d:0 "Your hand\n§PAurochs\n§BDolphin\n§QElephant\n§GCaiman"
-# goz.66.d:0 "Your hand\n§PAurochs\n§BDolphin\n§QElephant\n§BDolphin"
-# goz.67.d:0 "Your hand\n§PAurochs\n§BDolphin\n§QElephant\n§QElephant"
-# goz.68.d:0 "Your hand\n§PAurochs\n§BDolphin\n§QElephant\n§OFalcon"
-# goz.69.d:0 "Your hand\n§PAurochs\n§BDolphin\n§OFalcon\n§PAurochs"
-# goz.70.d:0 "Your hand\n§PAurochs\n§BDolphin\n§OFalcon\n§RBloodhound"
-# goz.71.d:0 "Your hand\n§PAurochs\n§BDolphin\n§OFalcon\n§GCaiman"
-# goz.72.d:0 "Your hand\n§PAurochs\n§BDolphin\n§OFalcon\n§BDolphin"
-# goz.73.d:0 "Your hand\n§PAurochs\n§BDolphin\n§OFalcon\n§QElephant"
-# goz.74.d:0 "Your hand\n§PAurochs\n§BDolphin\n§OFalcon\n§OFalcon"
-# goz.75.d:0 "Your hand\n§PAurochs\n§QElephant\n§OFalcon\n§PAurochs"
-# goz.76.d:0 "Your hand\n§PAurochs\n§QElephant\n§OFalcon\n§RBloodhound"
-# goz.77.d:0 "Your hand\n§PAurochs\n§QElephant\n§OFalcon\n§GCaiman"
-# goz.78.d:0 "Your hand\n§PAurochs\n§QElephant\n§OFalcon\n§BDolphin"
-# goz.79.d:0 "Your hand\n§PAurochs\n§QElephant\n§OFalcon\n§QElephant"
-# goz.80.d:0 "Your hand\n§PAurochs\n§QElephant\n§OFalcon\n§OFalcon"
-# goz.81.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§BDolphin\n§PAurochs"
-# goz.82.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§BDolphin\n§RBloodhound"
-# goz.83.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§BDolphin\n§GCaiman"
-# goz.84.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§BDolphin\n§BDolphin"
-# goz.85.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§BDolphin\n§QElephant"
-# goz.86.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§BDolphin\n§OFalcon"
-# goz.87.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§QElephant\n§PAurochs"
-# goz.88.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§QElephant\n§RBloodhound"
-# goz.89.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§QElephant\n§GCaiman"
-# goz.90.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§QElephant\n§BDolphin"
-# goz.91.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§QElephant\n§QElephant"
-# goz.92.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§QElephant\n§OFalcon"
-# goz.93.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§OFalcon\n§PAurochs"
-# goz.94.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§OFalcon\n§RBloodhound"
-# goz.95.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§OFalcon\n§GCaiman"
-# goz.96.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§OFalcon\n§BDolphin"
-# goz.97.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§OFalcon\n§QElephant"
-# goz.98.d:0 "Your hand\n§RBloodhound\n§GCaiman\n§OFalcon\n§OFalcon"
-# goz.99.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§QElephant\n§PAurochs"
-# goz.100.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§QElephant\n§RBloodhound"
-# goz.101.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§QElephant\n§GCaiman"
-# goz.102.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§QElephant\n§BDolphin"
-# goz.103.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§QElephant\n§QElephant"
-# goz.104.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§QElephant\n§OFalcon"
-# goz.105.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§OFalcon\n§PAurochs"
-# goz.106.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§OFalcon\n§RBloodhound"
-# goz.107.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§OFalcon\n§GCaiman"
-# goz.108.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§OFalcon\n§BDolphin"
-# goz.109.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§OFalcon\n§QElephant"
-# goz.110.d:0 "Your hand\n§RBloodhound\n§BDolphin\n§OFalcon\n§OFalcon"
-# goz.111.d:0 "Your hand\n§RBloodhound\n§QElephant\n§OFalcon\n§PAurochs"
-# goz.112.d:0 "Your hand\n§RBloodhound\n§QElephant\n§OFalcon\n§RBloodhound"
-# goz.113.d:0 "Your hand\n§RBloodhound\n§QElephant\n§OFalcon\n§GCaiman"
-# goz.114.d:0 "Your hand\n§RBloodhound\n§QElephant\n§OFalcon\n§BDolphin"
-# goz.115.d:0 "Your hand\n§RBloodhound\n§QElephant\n§OFalcon\n§QElephant"
-# goz.116.d:0 "Your hand\n§RBloodhound\n§QElephant\n§OFalcon\n§OFalcon"
-# goz.117.d:0 "Your hand\n§GCaiman\n§BDolphin\n§QElephant\n§PAurochs"
-# goz.118.d:0 "Your hand\n§GCaiman\n§BDolphin\n§QElephant\n§RBloodhound"
-# goz.119.d:0 "Your hand\n§GCaiman\n§BDolphin\n§QElephant\n§GCaiman"
-# goz.120.d:0 "Your hand\n§GCaiman\n§BDolphin\n§QElephant\n§BDolphin"
-# goz.121.d:0 "Your hand\n§GCaiman\n§BDolphin\n§QElephant\n§QElephant"
-# goz.122.d:0 "Your hand\n§GCaiman\n§BDolphin\n§QElephant\n§OFalcon"
-# goz.123.d:0 "Your hand\n§GCaiman\n§BDolphin\n§OFalcon\n§PAurochs"
-# goz.124.d:0 "Your hand\n§GCaiman\n§BDolphin\n§OFalcon\n§RBloodhound"
-# goz.125.d:0 "Your hand\n§GCaiman\n§BDolphin\n§OFalcon\n§GCaiman"
-# goz.126.d:0 "Your hand\n§GCaiman\n§BDolphin\n§OFalcon\n§BDolphin"
-# goz.127.d:0 "Your hand\n§GCaiman\n§BDolphin\n§OFalcon\n§QElephant"
-# goz.128.d:0 "Your hand\n§GCaiman\n§BDolphin\n§OFalcon\n§OFalcon"
-# goz.129.d:0 "Your hand\n§GCaiman\n§QElephant\n§OFalcon\n§PAurochs"
-# goz.130.d:0 "Your hand\n§GCaiman\n§QElephant\n§OFalcon\n§RBloodhound"
-# goz.131.d:0 "Your hand\n§GCaiman\n§QElephant\n§OFalcon\n§GCaiman"
-# goz.132.d:0 "Your hand\n§GCaiman\n§QElephant\n§OFalcon\n§BDolphin"
-# goz.133.d:0 "Your hand\n§GCaiman\n§QElephant\n§OFalcon\n§QElephant"
-# goz.134.d:0 "Your hand\n§GCaiman\n§QElephant\n§OFalcon\n§OFalcon"
-# goz.135.d:0 "Your hand\n§BDolphin\n§QElephant\n§OFalcon\n§PAurochs"
-# goz.136.d:0 "Your hand\n§BDolphin\n§QElephant\n§OFalcon\n§RBloodhound"
-# goz.137.d:0 "Your hand\n§BDolphin\n§QElephant\n§OFalcon\n§GCaiman"
-# goz.138.d:0 "Your hand\n§BDolphin\n§QElephant\n§OFalcon\n§BDolphin"
-# goz.139.d:0 "Your hand\n§BDolphin\n§QElephant\n§OFalcon\n§QElephant"
-# goz.140.d:0 "Your hand\n§BDolphin\n§QElephant\n§OFalcon\n§OFalcon"
-##
-# goz.21.a:0 "Lucky Win"
-# goz.22.a:0 "Lucky Win"
-# goz.23.a:0 "End Game"
-# goz.24.a:0 "Lucky Win"
-# goz.25.a:0 "Lucky Win"
-# goz.26.a:0 "Lucky Win"
-# goz.27.a:0 "End Game"
-# goz.28.a:0 "End Game"
-# goz.29.a:0 "Lucky Win"
-# goz.30.a:0 "End Game"
-# goz.31.a:0 "Lucky Win"
-# goz.32.a:0 "Lucky Win"
-# goz.33.a:0 "End Game"
-# goz.34.a:0 "End Game"
-# goz.35.a:0 "Lucky Win"
-# goz.36.a:0 "Lucky Win"
-# goz.37.a:0 "End Game"
-# goz.38.a:0 "Lucky Win"
-# goz.39.a:0 "Lucky Win"
-# goz.40.a:0 "Lucky Win"
-# goz.41.a:0 "Lucky Win"
-# goz.42.a:0 "Lucky Win"
-# goz.43.a:0 "Lucky Win"
-# goz.44.a:0 "End Game"
-# goz.45.a:0 "Lucky Win"
-# goz.46.a:0 "Lucky Win"
-# goz.47.a:0 "End Game"
-# goz.48.a:0 "Lucky Win"
-# goz.49.a:0 "Lucky Win"
-# goz.50.a:0 "Lucky Win"
-# goz.51.a:0 "Lucky Win"
-# goz.52.a:0 "Lucky Win"
-# goz.53.a:0 "End Game"
-# goz.54.a:0 "Lucky Win"
-# goz.55.a:0 "Lucky Win"
-# goz.56.a:0 "Lucky Win"
-# goz.57.a:0 "End Game"
-# goz.58.a:0 "Lucky Win"
-# goz.59.a:0 "End Game"
-# goz.60.a:0 "Lucky Win"
-# goz.61.a:0 "Lucky Win"
-# goz.62.a:0 "End Game"
-# goz.63.a:0 "End Game"
-# goz.64.a:0 "Lucky Win"
-# goz.65.a:0 "Lucky Win"
-# goz.66.a:0 "End Game"
-# goz.67.a:0 "End Game"
-# goz.68.a:0 "Lucky Win"
-# goz.69.a:0 "Lucky Win"
-# goz.70.a:0 "Lucky Win"
-# goz.71.a:0 "Lucky Win"
-# goz.72.a:0 "Lucky Win"
-# goz.73.a:0 "Lucky Win"
-# goz.74.a:0 "End Game"
-# goz.75.a:0 "Lucky Win"
-# goz.76.a:0 "Lucky Win"
-# goz.77.a:0 "Lucky Win"
-# goz.78.a:0 "Lucky Win"
-# goz.79.a:0 "Lucky Win"
-# goz.80.a:0 "End Game"
-# goz.81.a:0 "Lucky Win"
-# goz.82.a:0 "Lucky Win"
-# goz.83.a:0 "End Game"
-# goz.84.a:0 "Lucky Win"
-# goz.85.a:0 "Lucky Win"
-# goz.86.a:0 "Lucky Win"
-# goz.87.a:0 "Lucky Win"
-# goz.88.a:0 "Lucky Win"
-# goz.89.a:0 "End Game"
-# goz.90.a:0 "Lucky Win"
-# goz.91.a:0 "Lucky Win"
-# goz.92.a:0 "Lucky Win"
-# goz.93.a:0 "Lucky Win"
-# goz.94.a:0 "End Game"
-# goz.95.a:0 "End Game"
-# goz.96.a:0 "Lucky Win"
-# goz.97.a:0 "Lucky Win"
-# goz.98.a:0 "End Game"
-# goz.99.a:0 "Lucky Win"
-# goz.100.a:0 "End Game"
-# goz.101.a:0 "Lucky Win"
-# goz.102.a:0 "End Game"
-# goz.103.a:0 "End Game"
-# goz.104.a:0 "Lucky Win"
-# goz.105.a:0 "Lucky Win"
-# goz.106.a:0 "Lucky Win"
-# goz.107.a:0 "Lucky Win"
-# goz.108.a:0 "Lucky Win"
-# goz.109.a:0 "Lucky Win"
-# goz.110.a:0 "End Game"
-# goz.111.a:0 "Lucky Win"
-# goz.112.a:0 "Lucky Win"
-# goz.113.a:0 "Lucky Win"
-# goz.114.a:0 "Lucky Win"
-# goz.115.a:0 "Lucky Win"
-# goz.116.a:0 "End Game"
-# goz.117.a:0 "Lucky Win"
-# goz.118.a:0 "Lucky Win"
-# goz.119.a:0 "End Game"
-# goz.120.a:0 "Lucky Win"
-# goz.121.a:0 "Lucky Win"
-# goz.122.a:0 "Lucky Win"
-# goz.123.a:0 "Lucky Win"
-# goz.124.a:0 "Lucky Win"
-# goz.125.a:0 "End Game"
-# goz.126.a:0 "Lucky Win"
-# goz.127.a:0 "Lucky Win"
-# goz.128.a:0 "End Game"
-# goz.129.a:0 "Lucky Win"
-# goz.130.a:0 "Lucky Win"
-# goz.131.a:0 "End Game"
-# goz.132.a:0 "Lucky Win"
-# goz.133.a:0 "End Game"
-# goz.134.a:0 "End Game"
-# goz.135.a:0 "Lucky Win"
-# goz.136.a:0 "Lucky Win"
-# goz.137.a:0 "Lucky Win"
-# goz.138.a:0 "Lucky Win"
-# goz.139.a:0 "Lucky Win"
-# goz.140.a:0 "End Game"
-#
-##SLV_ILD
-# ild.7.t:0 "Void rupture"
-# ild.7.a:0 "Yay"
-# ild.7.b:0 "Nay"
-# ild.8.t:0 "First Labour"
-# ild.9.t:0 "Second Labour"
-# ild.10.t:0 "Third Labour"
-# ild.11.t:0 "Fourth Labour"
-# ild.12.t:0 "Fifth Labour"
-# ild.13.t:0 "Sixth Labour"
-# ild.14.t:0 "Seventh Labour"
-# ild.15.t:0 "Eighth Labour"
-# ild.16.t:0 "Salvation syndicate"
+﻿l_english:
+#SLV_ILD
+ ild.7.t:0 "Void rupture"
+ ild.7.a:0 "Yay"
+ ild.7.b:0 "Nay"
+ ild.8.t:0 "First Labour"
+ ild.9.t:0 "Second Labour"
+ ild.10.t:0 "Third Labour"
+ ild.11.t:0 "Fourth Labour"
+ ild.12.t:0 "Fifth Labour"
+ ild.13.t:0 "Sixth Labour"
+ ild.14.t:0 "Seventh Labour"
+ ild.15.t:0 "Eighth Labour"
+ ild.16.t:0 "Salvation syndicate"
