--- a/localisation/akob_pain_l_english.yml
+++ b/localisation/akob_pain_l_english.yml
@@ -1,3 +1,31 @@
 ﻿l_english:
- goz.1.t:0 "does tis work"
- goz.1.d:0 "[?root.GOZ_dukha_fire|R]\n[?root.GOZ_dukha_water|B]\n[?root.GOZ_dukha_slime|G]\n[?root.GOZ_dukha_candy|O]\n"
+ goz.1.t:0 "Dukha: Round One"
+ goz.1.d:0 "Food: [?root.GOZ_dukha_food|R]\nWater: [?root.GOZ_dukha_water|B]\nWood: [?root.GOZ_dukha_wood|G]\nStone: [?root.GOZ_dukha_stone|O]\n"
+ goz.1.a:0 "Burn"
+ goz.1.b:0 "Feast"
+ goz.1.c:0 "Harvest"
+ goz.1.e:0 "Flood"
+ goz.1.f:0 "Bust"
+ goz.2.t:0 "Dukha: Round Two"
+ goz.2.d:0 "Food: [?root.GOZ_dukha_food|R]\nWater: [?root.GOZ_dukha_water|B]\nWood: [?root.GOZ_dukha_wood|G]\nStone: [?root.GOZ_dukha_stone|O]\n"
+ goz.2.a:0 "Burn"
+ goz.2.b:0 "Feast"
+ goz.2.c:0 "Harvest"
+ goz.2.e:0 "Flood"
+ goz.2.f:0 "Bust"
+ goz.3.t:0 "Dukha: Final Round"
+ goz.3.d:0 "Food: [?root.GOZ_dukha_food|R]\nWater: [?root.GOZ_dukha_water|B]\nWood: [?root.GOZ_dukha_wood|G]\nStone: [?root.GOZ_dukha_stone|O]\n"
+ goz.3.a:0 "Burn"
+ goz.3.b:0 "Feast"
+ goz.3.c:0 "Harvest"
+ goz.3.e:0 "Flood"
+ goz.3.f:0 "Bust"
+ goz.4.t:0 "Results"
+ goz.4.d:0 "Food: [?root.GOZ_dukha_food|R]\nWater: [?root.GOZ_dukha_water|B]\nWood: [?root.GOZ_dukha_wood|G]\nStone: [?root.GOZ_dukha_stone|O]\n"
+ goz.4.a:0 "End Game"
+ goz.4.b:0 "Bust"
+
+ goz_dukha_burn_tt:0 "§RDecrease Food§!\n§GIncrease Water§!\n§RDecrease Wood§!\n§GIncrease Stone§!\n"
+ goz_dukha_feast_tt:0 "§RDecrease Food§!\n§RDecrease Water§!\n§GIncrease Wood§!\n"
+ goz_dukha_harvest_tt:0 "§GIncrease Food§!\n§RDecrease Wood§!\n"
+ goz_dukha_flood_tt:0 "§GIncrease Water§!\n§RDecrease Stone§!\n"
