--- a/localisation/akob_arbiter_l_english.yml
+++ b/localisation/akob_arbiter_l_english.yml
@@ -1,5 +1,31 @@
 ﻿l_english:
  MRO_majors_desc:0 "[Root.GetMROMajorName]"
- MRO_5_MAJOR_NAME:0 "[?global.majors^0.GetName]'s number of factories: [?MRO.majors_factories^0]\n[?global.majors^1.GetName]'s number of factories: [?MRO.majors_factories^1]\n[?global.majors^2.GetName]'s number of factories: [?MRO.majors_factories^2]\n[?global.majors^3.GetName]'s number of factories: [?MRO.majors_factories^3]\n[?global.majors^4.GetName]'s number of factories: [?MRO.majors_factories^4]\nAverage factories: [?MRO.majors_average_factories]"
- MRO_6_MAJOR_NAME:0 "[?global.majors^0.GetName]'s number of factories: [?MRO.majors_factories^0]\n[?global.majors^1.GetName]'s number of factories: [?MRO.majors_factories^1]\n[?global.majors^2.GetName]'s number of factories: [?MRO.majors_factories^2]\n[?global.majors^3.GetName]'s number of factories: [?MRO.majors_factories^3]\n[?global.majors^4.GetName]'s number of factories: [?MRO.majors_factories^4]\n[?global.majors^5.GetName]'s number of factories: [?MRO.majors_factories^5]\nAverage factories: [?MRO.majors_average_factories]"
- MRO_7_MAJOR_NAME:0 "[?global.majors^0.GetName]'s number of factories: [?MRO.majors_factories^0]\n[?global.majors^1.GetName]'s number of factories: [?MRO.majors_factories^1]\n[?global.majors^2.GetName]'s number of factories: [?MRO.majors_factories^2]\n[?global.majors^3.GetName]'s number of factories: [?MRO.majors_factories^3]\n[?global.majors^4.GetName]'s number of factories: [?MRO.majors_factories^4]\n[?global.majors^5.GetName]'s number of factories: [?MRO.majors_factories^5]\n[?global.majors^6.GetName]'s number of factories: [?MRO.majors_factories^6]\nAverage factories: [?MRO.majors_average_factories]"
+ MRO_5_MAJOR_NAME:0 "[?global.majors^0.GetName]'s strength: [Root.GetMROMajorThreatslot1Name]\n[?global.majors^1.GetName]'s strength: [Root.GetMROMajorThreatslot2Name]\n[?global.majors^2.GetName]'s strength: [Root.GetMROMajorThreatslot3Name]\n[?global.majors^3.GetName]'s strength: [Root.GetMROMajorThreatslot4Name]\n[?global.majors^4.GetName]'s strength: [Root.GetMROMajorThreatslot5Name]\n\n[?global.majors^0.GetName]'s strength: [?MRO.majors_factories^0]\n[?global.majors^1.GetName]'s strength: [?MRO.majors_factories^1]\n[?global.majors^2.GetName]'s strength: [?MRO.majors_factories^2]\n[?global.majors^3.GetName]'s strength: [?MRO.majors_factories^3]\n[?global.majors^4.GetName]'s strength: [?MRO.majors_factories^4]"
+
+ MRO_6_MAJOR_NAME:0 "[?global.majors^0.GetName]'s strength: [Root.GetMROMajorThreatslot1Name]\n[?global.majors^1.GetName]'s strength: [Root.GetMROMajorThreatslot2Name]\n[?global.majors^2.GetName]'s strength: [Root.GetMROMajorThreatslot3Name]\n[?global.majors^3.GetName]'s strength: [Root.GetMROMajorThreatslot4Name]\n[?global.majors^4.GetName]'s strength: [Root.GetMROMajorThreatslot5Name]\n[?global.majors^5.GetName]'s strength: [Root.GetMROMajorThreatslot6Name]\n\n[?global.majors^0.GetName]'s strength: [?MRO.majors_factories^0]\n[?global.majors^1.GetName]'s strength: [?MRO.majors_factories^1]\n[?global.majors^2.GetName]'s strength: [?MRO.majors_factories^2]\n[?global.majors^3.GetName]'s strength: [?MRO.majors_factories^3]\n[?global.majors^4.GetName]'s strength: [?MRO.majors_factories^4]\n[?global.majors^5.GetName]'s strength: [?MRO.majors_factories^5]"
+
+ MRO_7_MAJOR_NAME:0 "[?global.majors^0.GetName]'s strength: [Root.GetMROMajorThreatslot1Name]\n[?global.majors^1.GetName]'s strength: [Root.GetMROMajorThreatslot2Name]\n[?global.majors^2.GetName]'s strength: [Root.GetMROMajorThreatslot3Name]\n[?global.majors^3.GetName]'s strength: [Root.GetMROMajorThreatslot4Name]\n[?global.majors^4.GetName]'s strength: [Root.GetMROMajorThreatslot5Name]\n[?global.majors^5.GetName]'s strength: [Root.GetMROMajorThreatslot6Name]\n[?global.majors^6.GetName]'s strength: [Root.GetMROMajorThreatslot7Name]\n\n[?global.majors^0.GetName]'s strength: [?MRO.majors_factories^0]\n[?global.majors^1.GetName]'s strength: [?MRO.majors_factories^1]\n[?global.majors^2.GetName]'s strength: [?MRO.majors_factories^2]\n[?global.majors^3.GetName]'s strength: [?MRO.majors_factories^3]\n[?global.majors^4.GetName]'s strength: [?MRO.majors_factories^4]\n[?global.majors^5.GetName]'s strength: [?MRO.majors_factories^5]\n[?global.majors^6.GetName]'s strength: [?MRO.majors_factories^6]"
+
+ MRO_1_slot_low:0 "§Otoo weak§!"
+ MRO_2_slot_low:0 "§Otoo weak§!"
+ MRO_3_slot_low:0 "§Otoo weak§!"
+ MRO_4_slot_low:0 "§Otoo weak§!"
+ MRO_5_slot_low:0 "§Otoo weak§!"
+ MRO_6_slot_low:0 "§Otoo weak§!"
+ MRO_7_slot_low:0 "§Otoo weak§!"
+ 
+ MRO_1_slot_medium:0 "§Gbalanced§!"
+ MRO_2_slot_medium:0 "§Gbalanced§!"
+ MRO_3_slot_medium:0 "§Gbalanced§!"
+ MRO_4_slot_medium:0 "§Gbalanced§!"
+ MRO_5_slot_medium:0 "§Gbalanced§!"
+ MRO_6_slot_medium:0 "§Gbalanced§!"
+ MRO_7_slot_medium:0 "§Gbalanced§!"
+ 
+ MRO_1_slot_high:0 "§Rtoo strong§!"
+ MRO_2_slot_high:0 "§Rtoo strong§!"
+ MRO_3_slot_high:0 "§Rtoo strong§!"
+ MRO_4_slot_high:0 "§Rtoo strong§!"
+ MRO_5_slot_high:0 "§Rtoo strong§!"
+ MRO_6_slot_high:0 "§Rtoo strong§!"
+ MRO_7_slot_high:0 "§Rtoo strong§!"
