yes its more efficient

--- a/localisation/akob_arbiter_l_english.yml
+++ b/localisation/akob_arbiter_l_english.yml
@@ -1,10 +1,31 @@
 ﻿l_english:
  MRO_majors_desc:0 "[Root.GetMROMajor1Details][Root.GetMROMajor2Details][Root.GetMROMajor3Details][Root.GetMROMajor4Details][Root.GetMROMajor5Details][Root.GetMROMajor6Details][Root.GetMROMajor7Details]"
  MRO_MAJOR_NAME_EMPTY:0 ""
- MRO_1_MAJOR_NAME:0 "[?global.majors^0.GetName]'s strength: [?MRO.majors_factories_display^0]"
- MRO_2_MAJOR_NAME:0 "\n[?global.majors^1.GetName]'s strength: [?MRO.majors_factories_display^1]"
- MRO_3_MAJOR_NAME:0 "\n[?global.majors^2.GetName]'s strength: [?MRO.majors_factories_display^2]"
- MRO_4_MAJOR_NAME:0 "\n[?global.majors^3.GetName]'s strength: [?MRO.majors_factories_display^3]"
- MRO_5_MAJOR_NAME:0 "\n[?global.majors^4.GetName]'s strength: [?MRO.majors_factories_display^4]"
- MRO_6_MAJOR_NAME:0 "\n[?global.majors^5.GetName]'s strength: [?MRO.majors_factories_display^5]"
- MRO_7_MAJOR_NAME:0 "\n[?global.majors^6.GetName]'s strength: [?MRO.majors_factories_display^6]"
+ MRO_1_MAJOR_NAME:0 "[?global.majors^0.GetName]'s strength: [Root.GetMROMajor1Slot]"
+ MRO_2_MAJOR_NAME:0 "\n[?global.majors^1.GetName]'s strength: [Root.GetMROMajor2Slot]"
+ MRO_3_MAJOR_NAME:0 "\n[?global.majors^2.GetName]'s strength: [Root.GetMROMajor3Slot]"
+ MRO_4_MAJOR_NAME:0 "\n[?global.majors^3.GetName]'s strength: [Root.GetMROMajor4Slot]"
+ MRO_5_MAJOR_NAME:0 "\n[?global.majors^4.GetName]'s strength: [Root.GetMROMajor5Slot]"
+ MRO_6_MAJOR_NAME:0 "\n[?global.majors^5.GetName]'s strength: [Root.GetMROMajor6Slot]"
+ MRO_7_MAJOR_NAME:0 "\n[?global.majors^6.GetName]'s strength: [Root.GetMROMajor7Slot]"
+ MRO_1_MAJOR_STRONG:0 "§RToo Strong§!"
+ MRO_1_MAJOR_BALANCED:0 "§GToo Balanced§!"
+ MRO_1_MAJOR_WEAK:0 "§OToo Weak§!"
+ MRO_2_MAJOR_STRONG:0 "§RToo Strong§!"
+ MRO_2_MAJOR_BALANCED:0 "§GToo Balanced§!"
+ MRO_2_MAJOR_WEAK:0 "§OToo Weak§!"
+ MRO_3_MAJOR_STRONG:0 "§RToo Strong§!"
+ MRO_3_MAJOR_BALANCED:0 "§GToo Balanced§!"
+ MRO_3_MAJOR_WEAK:0 "§OToo Weak§!"
+ MRO_4_MAJOR_STRONG:0 "§RToo Strong§!"
+ MRO_4_MAJOR_BALANCED:0 "§GToo Balanced§!"
+ MRO_4_MAJOR_WEAK:0 "§OToo Weak§!"
+ MRO_5_MAJOR_STRONG:0 "§RToo Strong§!"
+ MRO_5_MAJOR_BALANCED:0 "§GToo Balanced§!"
+ MRO_5_MAJOR_WEAK:0 "§OToo Weak§!"
+ MRO_6_MAJOR_STRONG:0 "§RToo Strong§!"
+ MRO_6_MAJOR_BALANCED:0 "§GToo Balanced§!"
+ MRO_6_MAJOR_WEAK:0 "§OToo Weak§!"
+ MRO_7_MAJOR_STRONG:0 "§RToo Strong§!"
+ MRO_7_MAJOR_BALANCED:0 "§GToo Balanced§!"
+ MRO_7_MAJOR_WEAK:0 "§OToo Weak§!"
