--- a/localisation/ideas_l_english.yml
+++ b/localisation/ideas_l_english.yml
@@ -477,7 +477,7 @@
  generic_naval_aircraft_manufacturer:0 "Naval Air Company"
  generic_naval_manufacturer:0 "Naval Company"
  generic_industrial_concern:0 "Industrial Company"
- generic_electronics_concern:0 "Electronics Company"
+ generic_void_energy_concern:0 "Void Energy Company"
  generic_spy_intel:0 "The Tinker"
  generic_spy_political:0 "The Tailor"
  generic_spy_coup:0 "The Soldier"
