--- a/localisation/research_l_english.yml
+++ b/localisation/research_l_english.yml
@@ -777,7 +777,7 @@
  TITLE_ELECTRONIC_SUBTITLE:0 "Electronic Engineering"
  TITLE_EXP_ROCKETS_SUBTITLE:0 "Experimental Rockets"
  TITLE_ATOMIC_RESEARCH_SUBTITLE:0 "Atomic Research"
- cat_mobile_warfare_research:0 "Mobile Warfare Doctrine"
+ cat_cavalry_warfare_research:0 "Mobile Warfare Doctrine"
  cat_superior_firepower_research:0 "Superior Firepower Doctrine"
  cat_grand_battle_plan_research:0 "Grand Battleplan Doctrine"
  cat_mass_assault_research:0 "Mass Assault Doctrine"
@@ -789,7 +789,7 @@
  cat_base_strike:0 "Base Strike Doctrine"
  cat_fleet_in_being_research:0 "Fleet in Being Doctrine"
  cat_trade_interdiction_research:0 "Trade Interdiction Doctrine"
- cat_mobile_warfare:0 "Mobile Warfare Doctrine"
+ cat_cavalry_warfare:0 "Mobile Warfare Doctrine"
  cat_superior_firepower:0 "Superior Firepower Doctrine"
  cat_grand_battle_plan:0 "Grand Battleplan Doctrine"
  cat_mass_assault:0 "Mass Assault Doctrine"
